--- a/.env
+++ b/.env
@@ -42,3 +42,8 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/formationSF"
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> victor-prdh/recaptcha-bundle ###
+GOOGLE_RECAPTCHA_SITE_KEY='6LeevY0hAAAAAIUmuqtPT1ma_-XfjUEITnQQlu42'
+GOOGLE_RECAPTCHA_SECRET_KEY='6LeevY0hAAAAAFNMqzRjitnJg9Qn6Zq1nPG-0X4c'
+###< victor-prdh/recaptcha-bundle ###
