--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,12 @@
 security:
     enable_authenticator_manager: true
+    # ici on place la hierarchie elle permet de definir qu'elle role sont attitre en plus de leur role de base 
+    role_hierarchy:
+        # l'admin auras tout les rôles 
+        ROLE_ADMIN: ['ROLE_ADMIN', 'ROLE_USER','ROLE_SECRETAIRE','ROLE_FORMATEUR']
+        ROLE_FORMATEUR: ['ROLE_FORMATEUR', 'ROLE_USER']
+        ROLE_SECRETAIRE: ['ROLE_SECRETAIRE', 'ROLE_USER']
+
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -23,17 +30,28 @@ security:
                 # where to redirect after logout
                 target: app_login
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+            remember_me:
+                secret:   '%kernel.secret%' # required
+        #     lifetime: 604800 # 1 week in seconds
+        #     # by default, the feature is enabled by checking a
+        #     # checkbox in the login form (see below), uncomment the
+        #     # following line to always enable it.
+                always_remember_me: true    
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+        #     # activate different ways to authenticate
+        #     # https://symfony.com/doc/current/security.html#the-firewall
+
+        #     # https://symfony.com/doc/current/security/impersonating_user.html
+        #     # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+    
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/secretaire, roles: ROLE_SECRETAIRE }
+        - { path: ^/formateur, roles: ROLE_FORMATEUR }
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
